tests/ui/parser/issues/issue-34222-1.rs
fn main() {
    /// comment //~ ERROR found a documentation comment that doesn't document anything
}
